--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -34,7 +34,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-md-4 mt-3">
+            <div class="col-md-3 mt-3">
                 <div>
                     <div class="d-flex">
                         <nb-icon icon="map-marker-alt" nbTooltip="Location" nbTooltipPlacement="left" pack="font-awesome">
@@ -49,13 +49,24 @@
                             </div>
                         </div>
                     </div>
-                    <p>
-                        <nb-icon icon="clock-outline" nbTooltip="Morbidity" nbTooltipPlacement="left"></nb-icon><span class="ps-2"
-                            *ngFor="let morbidity of morbidityValue">{{morbidity}}</span>
-                    </p>
+ 
+
+                     <nb-card>
+                        <nb-card-body class="example-items-col">
+                            <nb-tag-list>
+                                <nb-tag appearance="filled" *ngFor="let tree of DiseaseList" [text]="tree" status="primary"></nb-tag>
+                            </nb-tag-list>
+                        </nb-card-body>
+                      </nb-card>
+
                 </div>
             </div>
-            <div class="col-md-3 mt-3">
+            <div class="col-md-2 mt-3">
+                <button nbButton ghost status="info">Insurance</button>
+                <button nbButton ghost status="info">Emergency Contact</button>
+                <button nbButton ghost status="info">Devices</button>
+            </div>
+            <div class="col-md-2 mt-3">
                 <button nbButton status="primary" class="mb-2 w-100 btn-lg" size="small">
                     <nb-icon icon="message-circle-outline"></nb-icon>{{'kChat' | translate}}</button>
                 <button nbButton  [nbPopover]="templateRef" nbPopoverPlacement="right" status="success" class="mb-2 w-100 btn-lg" size="small">
