fix: remove extra spacing under the profile card

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -1,4 +1,4 @@
-<nb-card [nbSpinner]="isLoading">
+<nb-card [nbSpinner]="isLoading" class="mb-1">
     <nb-card-body>
         <div class="row">
             <div class="col-md-2">
