feat: Added devices list

--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -394,7 +394,7 @@
                   </nb-tab>
                   <nb-tab tabTitle="{{'kDevices' | translate}}">
                     <nb-card-body>
-                        <app-devices></app-devices>
+                        <app-devices (deviceData)= "getRecord($event)"></app-devices>
                     </nb-card-body>     
                       </nb-tab>
                </nb-tabset>
