--- a/src/app/shared/components/devices/devices.component.html
+++ b/src/app/shared/components/devices/devices.component.html
@@ -1,8 +1,8 @@
-<div class="float-end">   
-        <nb-actions size="tiny">
-            <nb-action nbTooltip="Add Patient" nbTooltipPlacement="top" icon="plus-circle-outline"
-                (click)="open(devicedialog)"></nb-action>
-        </nb-actions>
+<div class="float-end">
+    <nb-actions size="medium">
+        <nb-action nbTooltip="Add Patient" nbTooltipPlacement="top" icon="plus-circle-outline"
+            (click)="open(devicedialog)"></nb-action>
+    </nb-actions>
 </div>
 
 <ng-template #devicedialog>
@@ -35,7 +35,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group mb-1">
-                            <label for="serialNumber" class="label"> <span class="text-danger">*</span>
+                            <label for="serialNumber" class="label">
                                 Serial Number</label>
                             <input type="text" fieldSize="medium" formControlName="serialNumber" nbInput fullWidth
                                 id="serialNumber" placeholder="Serial Number">
@@ -46,23 +46,50 @@
         </nb-card-body>
         <nb-card-footer>
             <div class="float-end">
-                <button nbButton status="danger"  size="small" (click)="refclose()">{{'kCancel' | translate}}</button>
-                <button nbButton status="success" class="ms-2" size="small" [disabled]="!deviceForm.valid" (click)="save()">{{'kSave' | translate}}</button>
+                <button nbButton status="danger" size="small" (click)="refclose()">{{'kCancel' | translate}}</button>
+                <button nbButton status="success" class="ms-2" size="small" [disabled]="!deviceForm.valid"
+                    (click)="save()">{{'kSave' | translate}}</button>
             </div>
         </nb-card-footer>
 
     </nb-card>
 </ng-template>
-
-<table [nbTreeGrid]="data">
-
-    <tr nbTreeGridHeaderRow *nbTreeGridHeaderRowDef="defaultColumns"></tr>
-    <tr nbTreeGridRow *nbTreeGridRowDef="let row; columns: defaultColumns"></tr>
-    <ng-container *ngFor="let column of defaultColumns; let index = index" [nbTreeGridColumnDef]="column">
-        <th nbTreeGridHeaderCell *nbTreeGridHeaderCellDef>
-            {{column}}
-        </th>
-        <td nbTreeGridCell *nbTreeGridCellDef="let row">{{row.data[column] || '-'}}</td>
-    </ng-container>
-
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th scope="col">Device Type</th>
+            <th scope="col">Manufacturer</th>
+            <th scope="col">Serial Number</th>
+            <th scope="col">Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let item of data">
+            <td>{{item.deviceType}}</td>
+            <td>{{item.manufacturer}}</td>
+            <td>{{item.serialNumber}}</td>
+            <td>
+                <nb-icon icon="trash" nbTooltip="Delete" (click)="openDialog(deleteDialog)" nbTooltipStatus="control"
+                    status="primary"></nb-icon>
+            </td>
+        </tr>
+        <tr *ngIf="data.length==0" class="text-center">
+            <td colspan="4">
+                <p>No Records Found</p>
+            </td>
+        </tr>
+    </tbody>
 </table>
+<ng-template #deleteDialog>
+    <nb-card class="dialog-card">
+        <nb-card-header>
+            <p class="subtitle">Are you sure want to delete?</p>
+        </nb-card-header>
+        <nb-card-body>
+            <div class="float-end">
+                <button nbButton status="success" size="small" (click)="delete(id)">Yes</button>
+                <button nbButton status="danger" class="ms-2" size="small" (click)="close()">No</button>
+            </div>
+        </nb-card-body>
+    </nb-card>
+</ng-template>
