--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@
 @import "~bootstrap/scss/forms";
 @import "~bootstrap/scss/buttons";
 @import "~bootstrap/scss/containers";
-
+@import "~bootstrap/scss/tables";
 @include nb-install() {
   @include nb-theme-global();
 };
