--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -59,16 +59,16 @@
                 </div>
             </div>
             <div class="col-md-2 mt-3">
-                <button nbButton ghost size="small" status="info">Insurance</button>
-                <button nbButton ghost  size="small" status="info">Emergency Contact</button>
-                <button nbButton ghost  size="small" status="info">Devices</button>
+                <button nbButton ghost size="small" status="info" class="mb-2 w-100">Insurance</button>
+                <button nbButton ghost  size="small" status="info" class="mb-2 w-100">Emergency Contact</button>
+                <button nbButton ghost  size="small" status="info" class="mb-2 w-100">Devices</button>
             </div>
             <div class="col-md-2 mt-3">
-                <button nbButton status="primary" class="mb-2 w-100 btn-lg" size="small">
+                <button nbButton status="primary" class="mb-2 w-100 justify-content-start" size="small">
                     <nb-icon icon="message-circle-outline"></nb-icon>{{'kChat' | translate}}</button>
-                <button nbButton  [nbPopover]="templateRef" nbPopoverPlacement="right" status="success" class="mb-2 w-100 btn-lg" size="small">
+                <button nbButton  [nbPopover]="templateRef" nbPopoverPlacement="right" status="success" class="mb-2 w-100 justify-content-start" size="small">
                     <nb-icon icon="phone-call-outline"></nb-icon>{{'kCall' | translate}}</button>
-                <button nbButton status="warning" class="mb-2 w-100" size="small"><nb-icon icon="clock-outline"></nb-icon>{{'kSchedule' | translate}}</button>
+                <button nbButton status="warning" class="mb-2 w-100 justify-content-start" size="small"><nb-icon icon="clock-outline"></nb-icon>{{'kSchedule' | translate}}</button>
             </div> 
             <ng-template #templateRef>
                 <div class="p-3">
