--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -2,8 +2,8 @@
         <nb-card-header>
             <div class="row d-flex">
                 <div class="col-md-11 col-sm-9"> {{!!patientID ? 'Edit' :'Add'}} Patient</div>
-                <div class="col-md-1 col-1 d-flex justify-content-end"(click)="cancelPatient()">
-                <nb-icon icon="close-outline"></nb-icon>
+                <div class="col-md-1 col-1 d-flex justify-content-end" (click)="cancel()">
+                      <nb-icon icon="close-outline"></nb-icon>
                 </div>
             </div>
         </nb-card-header>
