--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -49,13 +49,19 @@
                             </div>
                         </div>
                     </div>
-                 <nb-card>
-                    <nb-card-body style="max-height:50px;overflow-x:auto">
-                            <nb-tag-list>
-                                <nb-tag appearance="filled" *ngFor="let tree of diseaseList" size="tiny" [text]="tree" status="info"></nb-tag>
-                              </nb-tag-list>
-                    </nb-card-body>
-                 </nb-card>
+                 <!-- <nb-card>
+                    <nb-card-body style="max-height:50px;overflow-x:auto"> -->
+                        <div class="d-flex pb-2">
+                            <nb-icon icon="notes-medical" nbTooltip="Disease" nbTooltipPlacement="left" pack="font-awesome">
+                            </nb-icon>
+                            <div class="ps-2">
+                                <nb-tag-list>
+                                    <nb-tag appearance="filled" *ngFor="let tree of diseaseList" size="tiny" [text]="tree" status="info"></nb-tag>
+                                  </nb-tag-list>
+                            </div>
+                        </div>
+                    <!-- </nb-card-body>
+                 </nb-card> -->
                 </div>
             </div>
             <div class="col-md-2 mt-3">
