fix: profile buttons alingments

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -65,9 +65,9 @@
                 </div>
             </div>
             <div class="col-md-2 mt-3">
-                <button nbButton ghost size="small" status="info" class="mb-2 w-100">Insurance</button>
-                <button nbButton ghost  size="small" status="info" class="mb-2 w-100">Emergency Contact</button>
-                <button nbButton ghost  size="small" status="info" class="mb-2 w-100">Devices</button>
+                <button nbButton ghost size="small" status="info" class="mb-2">Insurance</button>
+                <button nbButton ghost  size="small" status="info" class="mb-2">Emergency Contact</button>
+                <button nbButton ghost  size="small" status="info" class="mb-2">Devices</button>
             </div>
             <div class="col-md-2 mt-3">
                 <button nbButton status="primary" class="mb-2 w-100 justify-content-start" size="small">
