fix: Added list dropdown

--- a/src/app/shared/components/devices/devices.component.html
+++ b/src/app/shared/components/devices/devices.component.html
@@ -19,7 +19,7 @@
                                    Device Type</label>
                                     <nb-select id="deviceTypes" size="medium" fullWidth formControlName="deviceType"
                                          placeholder="Select Device type">
-                                        <nb-option *ngFor="let item of deviceTypes" [value]="item.id">
+                                        <nb-option *ngFor="let item of deviceTypes" [value]="item.name">
                                             {{item?.name}}</nb-option>
                                     </nb-select>
                         </div>
