--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -4,16 +4,16 @@
             <div class="row m-auto">
                 <div class="col-auto mx-auto mb-3">
                     <nb-button-group status="primary" size="tiny">
-                        <button nbButtonToggle nbButton pressed (click)= "getData(0)" >{{'kAll' | translate}}</button>
-                        <button nbButtonToggle nbButton (click)="getData(1)">{{'kMonitored' | translate}}</button>
+                        <button nbButtonToggle nbButton pressed (click)= "loadNext(undefined, 0)" >{{'kAll' | translate}}</button>
+                        <button nbButtonToggle nbButton (click)="loadNext(undefined,1)">{{'kMonitored' | translate}}</button>
                     </nb-button-group>
                 </div>
                 <div class="col-auto mt-1 mx-auto mb-3 position-relative">
                     <div class="badge-position cursor-pointer" *ngIf = "isFilter"><nb-badge text="99+" status="danger" position="top left" dotMode = true (click)="filterPatient()"></nb-badge></div>
                     <nb-actions size="tiny">
-                        <nb-action nbTooltip="Filter" nbTooltipPlacement="top" icon="funnel-outline" (click)="filterPatient()">
+                        <nb-action class="ps-0 pe-0" nbTooltip="Filter" nbTooltipPlacement="top" icon="funnel-outline" (click)="filterPatient()">
                         </nb-action>
-                        <nb-action nbTooltip="Add Patient" nbTooltipPlacement="top" icon="plus-circle-outline" (click)="addPatient()"></nb-action>
+                        <nb-action nbTooltip="Add Patient" nbTooltipPlacement="top" class="pe-0" icon="plus-circle-outline" (click)="addPatient()"></nb-action>
                     </nb-actions>
                 </div>
             </div>
@@ -21,7 +21,7 @@
         <nb-list-item>
             <nb-form-field class="w-100">
                 <nb-icon nbPrefix icon="search-outline" pack="eva"></nb-icon>
-                <input type="text" name="searchText" fullWidth status="success" nbInput [(ngModel)]="searchText"
+                <input type="search" id='searchText' name="searchText" fullWidth status="success" nbInput [(ngModel)]="searchText" (search)="search()"
                      #SearchInput>
             </nb-form-field>
         </nb-list-item>
