fix: Added cancel button

--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -410,7 +410,7 @@
             </div> -->
             <div class="row px-5 justify-content-end">
                 <div class="col-md-2 col-2 px-0 mr-2 ml-2 d-flex justify-content-end">
-                    <button nbButton class="w-100" status="danger" (click)=cancelPatient()>{{'kCancel' | translate}}</button>
+                    <button nbButton class="w-100" status="danger" (click)=cancel()>{{'kCancel' | translate}}</button>
                 </div>
                 <div class="col-md-2 px-0 col-2 d-flex justify-content-end" style="margin-left: 12px;">
                     <button class="w-100" [disabled]="!profileForm.valid" nbButton
