add: patients profile picture add and edit

--- a/src/app/pages/patients/add/add.component.scss
+++ b/src/app/pages/patients/add/add.component.scss
@@ -19,3 +19,9 @@ nb-tabset ::ng-deep > ul >li >a:focus  {
     min-width: 878px;
     max-width: 878px;
 }
+.bg-gray{
+    background-color: #ced4da;
+}
+.cursor-pointer{
+    cursor: pointer;
+}
