--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -11,6 +11,19 @@
             <form [formGroup]="profileForm" class="m-auto w-60">
             <nb-tabset fullWidth >
                 <nb-tab tabTitle="{{'kGeneral' | translate}}">
+                        <div class="row pb-3">
+                                <div class="col-auto position-relative m-auto ">
+                                    <nb-user class="cursor-pointer user-profile" [picture]="profileData?.imageURL"
+                                        [ngClass]="{'none': profileData?.monitored == 0,'success': profileData?.alarm == 0 && profileData?.monitored == 1, 'warning': profileData?.alarm == 1 && profileData?.monitored == 1, 'danger': profileData?.alarm == 2 && profileData?.monitored == 1}">
+                                    </nb-user>
+                                    <label for="file-input">
+                                        <nb-icon class="position-absolute bottom-0 end-0 bg-gray mx-4 cursor-pointer h-25 w-25" nbTooltip="Edit" icon="edit-outline"
+                                            ></nb-icon>
+                                    </label>
+                                
+                                    <input id="file-input" (change)="changeProfile($event)" class="d-none" type="file" nbInput fullWidth fieldSize="small" placeholder="Input">
+                                </div>
+                        </div>
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group mb-1">
