--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,3 +82,18 @@ nb-list-item {
     display: none;
 }
 /* End */
+.nb-theme-default {
+	nb-user.user-profile {
+		.user-picture {
+			height: 7.5rem !important;
+			width: 7.5rem !important;
+		}
+	}
+}
+.nb-theme-default {
+	nb-user.user-profile {
+		.info-container {
+		display: none;
+		}
+	}
+}
