fix: profile row

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -84,6 +84,11 @@
                 </div>
               </ng-template>
         </div>
+        <div class="row">
+            <div class="offset-md-2 col-md-10">
+                comming soon
+            </div>
+        </div>
     </nb-card-body>
 </nb-card>
 <nb-route-tabset [tabs]="tabs"></nb-route-tabset>
