--- a/src/app/shared/components/devices/devices.component.html
+++ b/src/app/shared/components/devices/devices.component.html
@@ -64,17 +64,17 @@
 <table class="table table-striped">
     <thead>
         <tr>
-            <th scope="col">Device Type</th>
-            <th scope="col">Manufacturer</th>
-            <th scope="col">Serial Number</th>
-            <th class="text-center" scope="col">Actions</th>
+            <th scope="col" class="subtitle">Device Type</th>
+            <th scope="col" class="subtitle">Manufacturer</th>
+            <th scope="col" class="subtitle">Serial Number</th>
+            <th class="text-center subtitle" scope="col">Actions</th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let item of data">
-            <td>{{item.deviceType}}</td>
-            <td>{{item.manufacturer}}</td>
-            <td>{{item.serialNumber}}</td>
+            <td class="subtitle">{{item.deviceType}}</td>
+            <td class="subtitle">{{item.manufacturer}}</td>
+            <td class="subtitle">{{item.serialNumber}}</td>
             <td class="text-center">
                 <nb-icon icon="trash" nbTooltip="Delete" (click)="openDialog(deleteDialog)" nbTooltipStatus="control"
                     status="primary"></nb-icon>
