fix: Changed tooltip

--- a/src/app/shared/components/devices/devices.component.html
+++ b/src/app/shared/components/devices/devices.component.html
@@ -1,6 +1,6 @@
 <div class="float-end">
     <nb-actions size="medium">
-        <nb-action nbTooltip="Add Patient" nbTooltipPlacement="top" icon="plus-circle-outline"
+        <nb-action nbTooltip="Add Devices" nbTooltipPlacement="top" icon="plus-circle-outline"
             (click)="open(devicedialog)"></nb-action>
     </nb-actions>
 </div>
