--- a/src/app/shared/components/devices/devices.component.html
+++ b/src/app/shared/components/devices/devices.component.html
@@ -14,8 +14,18 @@
             <form [formGroup]="deviceForm">
                 <div class="row">
                     <div class="col-md-12">
+                         <div class="form-group mb-1">
+                            <label for="manufacturer" class="label"> <span class="text-danger">*</span>
+                                Manufacturer</label>
+                            <input type="text" fieldSize="medium" formControlName="manufacturer" nbInput fullWidth
+                                id="manufacturer" placeholder="Manufacturer">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
                         <div class="form-group mb-1">
-                                <label for="deviceTypes" class="label"> <span class="danger"></span>
+                                <label for="deviceTypes" class="label"> <span class="danger">*</span>
                                    Device Type</label>
                                     <nb-select id="deviceTypes" size="medium" fullWidth formControlName="deviceType"
                                          placeholder="Select Device type">
@@ -28,10 +38,10 @@
                 <div class="row">
                     <div class="col-md-12">
                          <div class="form-group mb-1">
-                            <label for="manufacturer" class="label"> <span class="text-danger">*</span>
-                                Manufacturer</label>
-                            <input type="text" fieldSize="medium" formControlName="manufacturer" nbInput fullWidth
-                                id="manufacturer" placeholder="Manufacturer">
+                            <label for="deviceName" class="label"> <span class="text-danger">*</span>
+                                Device Name</label>
+                            <input type="text" fieldSize="medium" formControlName="deviceName" nbInput fullWidth
+                                id="deviceName" placeholder="Device Name">
                         </div>
                     </div>
                 </div>
@@ -64,24 +74,26 @@
 <table class="table table-striped">
     <thead>
         <tr>
-            <th scope="col" class="subtitle">Device Type</th>
             <th scope="col" class="subtitle">Manufacturer</th>
+            <th scope="col" class="subtitle">Device Type</th>
+            <th scope="col" class="subtitle">Device Name</th>
             <th scope="col" class="subtitle">Serial Number</th>
             <th class="text-center subtitle" scope="col">Actions</th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let item of data">
-            <td class="subtitle">{{item.deviceType}}</td>
+        <tr *ngFor="let item of deviceList">
             <td class="subtitle">{{item.manufacturer}}</td>
+            <td class="subtitle">{{item.deviceType}}</td>
+            <td class="subtitle">{{item.deviceName}}</td>
             <td class="subtitle">{{item.serialNumber}}</td>
             <td class="text-center">
                 <nb-icon icon="trash" nbTooltip="Delete" (click)="openDialog(deleteDialog)" nbTooltipStatus="control"
                     status="primary"></nb-icon>
             </td>
         </tr>
-        <tr *ngIf="data.length==0" class="text-center">
-            <td colspan="4">
+        <tr *ngIf="deviceList.length==0" class="text-center">
+            <td colspan="5">
                 <p>No Records Found</p>
             </td>
         </tr>
