--- a/src/app/pages/patients/add/add.component.scss
+++ b/src/app/pages/patients/add/add.component.scss
@@ -7,14 +7,14 @@
     overflow: hidden;
 }
 .dark nb-tabset ::ng-deep > ul  {
-    position: -webkit-sticky; /* Safari */
+    position: --webkit-sticky; /* Safari */
     position: sticky; 
     top:0;
     z-index: 500;
     background-color: #222b45;
 }
 .default nb-tabset ::ng-deep > ul  {
-    position: -webkit-sticky; /* Safari */
+    position: --webkit-sticky; /* Safari */
     position: sticky; 
     top:0;
     z-index: 500;
