fix: Added validation

--- a/src/app/shared/components/devices/devices.component.html
+++ b/src/app/shared/components/devices/devices.component.html
@@ -25,7 +25,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group mb-1">
-                                <label for="deviceTypes" class="label"> <span class="danger">*</span>
+                                <label for="deviceTypes" class="label"> <span class="text-danger">*</span>
                                    Device Type</label>
                                     <nb-select id="deviceTypes" size="medium" fullWidth formControlName="deviceType"
                                          placeholder="Select Device type">
@@ -59,10 +59,10 @@
         </nb-card-body>
         <nb-card-footer>
             <div class="row justify-content-end">
-                <div class="col-5">
+                <div class="col-5 pe-2">
                     <button nbButton status="danger" class="w-100" size="small" (click)="refclose()">{{'kCancel' | translate}}</button>
                 </div>
-                <div class="col-5">
+                <div class="col-5 ps-2">
                     <button nbButton status="success" class="w-100" size="small" [disabled]="!deviceForm.valid"
                     (click)="save()">{{'kSave' | translate}}</button>
                 </div>
