--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -34,10 +34,10 @@
                     </p>
                 </div>
             </div>
-            <div class="col-md-3 mt-3">
+            <div class="col-md-3 mt-3" [ngClass] = "{'col-md-3': showEmergency, 'col-md-4': !showEmergency}">
                 <div>
                     <div class="d-flex pb-2">
-                        <nb-icon icon="map-marker-alt" nbTooltip="Location" nbTooltipPlacement="left" pack="font-awesome">
+                        <nb-icon icon="map-marker-alt" nbTooltip="Address" nbTooltipPlacement="left" pack="font-awesome">
                         </nb-icon>
                         <div class="ps-2">
                             <div>{{patient?.address}}, </div>
@@ -49,27 +49,30 @@
                             </div>
                         </div>
                     </div>
-                 <!-- <nb-card>
-                    <nb-card-body style="max-height:50px;overflow-x:auto"> -->
-                        <div class="d-flex pb-2" *ngIf="!!diseaseList?.length">
-                            <nb-icon icon="notes-medical" nbTooltip="Disease" nbTooltipPlacement="left" pack="font-awesome">
-                            </nb-icon>
-                            <div class="ps-2">
-                                <nb-tag-list>
-                                    <nb-tag appearance="filled" *ngFor="let tree of diseaseList" size="tiny" [text]="tree" status="info"></nb-tag>
-                                  </nb-tag-list>
-                            </div>
-                        </div>
-                    <!-- </nb-card-body>
-                 </nb-card> -->
                 </div>
             </div>
-            <div class="col-md-2 mt-3">
-                <button nbButton ghost size="small" status="info" class="mb-2">Insurance</button>
+            <div class="col-md-2 mt-3" *ngIf = "showEmergency">
+                    <div>
+                        <div class="d-flex pb-2">
+                            <nb-icon icon="address-book" nbTooltip="Emergency Contact" nbTooltipPlacement="left" pack="font-awesome">
+                            </nb-icon>
+                            <div class="ps-2">
+                                <div *ngIf = "patientExtraData?.emergencyContact">
+                                    <div>{{trimContact(patientExtraData?.emergencyContact.name)}}</div>
+                                    <div>{{trimContact(patientExtraData?.emergencyContact.number)}} </div>
+                                    <div *ngIf="patientExtraData?.emergencyContact.relation">{{relationName}}</div>
+                                </div>
+                                <div *ngIf = "!patientExtraData?.emergencyContact">
+                                    ---
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                <!-- <button nbButton ghost size="small" status="info" class="mb-2">Insurance</button>
                 <button nbButton ghost  size="small" status="info" class="mb-2">Emergency Contact</button>
-                <button nbButton ghost  size="small" status="info" class="mb-2">Devices</button>
+                <button nbButton ghost  size="small" status="info" class="mb-2">Devices</button> -->
             </div>
-            <div class="col-md-2 mt-3">
+            <div class="col-md-2 mt-3" [ngClass] = "{'col-md-2': showEmergency, 'col-md-3': !showEmergency}">
                 <button nbButton status="primary" class="mb-2 w-100 justify-content-start" size="small">
                     <nb-icon icon="message-circle-outline"></nb-icon>{{'kChat' | translate}}</button>
                 <button nbButton  [nbPopover]="templateRef" nbPopoverPlacement="right" status="success" class="mb-2 w-100 justify-content-start" size="small">
@@ -86,7 +89,15 @@
         </div>
         <div class="row">
             <div class="offset-md-2 col-md-10">
-                comming soon
+                <div class="d-flex pb-2" *ngIf="!!diseaseList?.length">
+                    <nb-icon icon="notes-medical" nbTooltip="Disease State" nbTooltipPlacement="left" pack="font-awesome">
+                    </nb-icon>
+                    <div class="ps-2">
+                        <nb-tag-list>
+                            <nb-tag appearance="filled" *ngFor="let tree of diseaseList" size="tiny" [text]="tree" status="info"></nb-tag>
+                        </nb-tag-list>
+                    </div>
+                </div>
             </div>
         </div>
     </nb-card-body>
