fix: fixed button size

--- a/src/app/shared/components/devices/devices.component.html
+++ b/src/app/shared/components/devices/devices.component.html
@@ -1,8 +1,10 @@
-<div class="float-end">
+<div class="row justify-content-end">
+    <div class="col-1 ps-1">
     <nb-actions size="medium">
         <nb-action nbTooltip="Add Devices" nbTooltipPlacement="top" icon="plus-circle-outline"
             (click)="open(devicedialog)"></nb-action>
     </nb-actions>
+</div>
 </div>
 
 <ng-template #devicedialog>
