--- a/src/app/shared/components/devices/devices.component.html
+++ b/src/app/shared/components/devices/devices.component.html
@@ -84,13 +84,13 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let item of deviceList">
+        <tr *ngFor="let item of deviceList; let i=index">
             <td class="subtitle">{{item.manufacturer}}</td>
             <td class="subtitle">{{item.deviceType}}</td>
             <td class="subtitle">{{item.deviceName}}</td>
             <td class="subtitle">{{item.serialNumber}}</td>
             <td class="text-center">
-                <nb-icon icon="trash" nbTooltip="Delete" (click)="openDialog(deleteDialog)" nbTooltipStatus="control"
+                <nb-icon icon="trash" nbTooltip="Delete" (click)="openDialog(deleteDialog, i)" nbTooltipStatus="control"
                     status="primary"></nb-icon>
             </td>
         </tr>
@@ -108,7 +108,7 @@
         </nb-card-header>
         <nb-card-body>
             <div class="float-end">
-                <button nbButton status="success" size="small" (click)="delete(id)">Yes</button>
+                <button nbButton status="success" size="small" (click)="delete()">Yes</button>
                 <button nbButton status="danger" class="ms-2" size="small" (click)="close()">No</button>
             </div>
         </nb-card-body>
