--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -34,7 +34,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-md-3 mt-3" [ngClass] = "{'col-md-3': showEmergency, 'col-md-4': !showEmergency}">
+            <div class="mt-3" [ngClass] = "{'col-md-3': showEmergency, 'col-md-4': !showEmergency}">
                 <div>
                     <div class="d-flex pb-2">
                         <nb-icon icon="map-marker-alt" nbTooltip="Address" nbTooltipPlacement="left" pack="font-awesome">
@@ -72,7 +72,7 @@
                 <button nbButton ghost  size="small" status="info" class="mb-2">Emergency Contact</button>
                 <button nbButton ghost  size="small" status="info" class="mb-2">Devices</button> -->
             </div>
-            <div class="col-md-2 mt-3" [ngClass] = "{'col-md-2': showEmergency, 'col-md-3': !showEmergency}">
+            <div class="mt-3" [ngClass] = "{'col-md-2': showEmergency, 'col-md-3': !showEmergency}">
                 <button nbButton status="primary" class="mb-2 w-100 justify-content-start" size="small">
                     <nb-icon icon="message-circle-outline"></nb-icon>{{'kChat' | translate}}</button>
                 <button nbButton  [nbPopover]="templateRef" nbPopoverPlacement="right" status="success" class="mb-2 w-100 justify-content-start" size="small">
