--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -19,7 +19,7 @@
   <nb-layout-column>
     <router-outlet></router-outlet>
   </nb-layout-column>
-  <nb-sidebar state="compacted" responsive >
+  <nb-sidebar state="compacted">
     <nb-menu [items]="menus"></nb-menu>
   </nb-sidebar>
   <!-- <nb-layout-footer><span class="caption">{{'kVersion' | translate}} {{version}}</span></nb-layout-footer> -->
