feat: Patched device values

--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -7,7 +7,7 @@
                 </div>
             </div>
         </nb-card-header>
-        <nb-card-body class="pt-0">
+        <nb-card-body class="p-0">
             <form [formGroup]="profileForm" class="m-auto w-60" [ngClass]="{'dark': theme == 'dark', 'default': theme == 'default'}">
             <nb-tabset fullWidth >
                 <nb-tab tabTitle="{{'kGeneral' | translate}}">
